--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,12 +8,12 @@
   }
 
   app-daily-forecast {
-    margin: 1em 0;
+    margin: 1em 0 2em;
   }
 
   app-temperature-toggle {
     display: flex;
     justify-content: center;
-    margin: 2em 0;
+    margin-top: 1em;
   }
 }
