--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
@@ -1,20 +1,29 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <ng-container matColumnDef="name">
-    <td mat-cell *matCellDef="let day"> {{day.name}} </td>
+<table mat-table [dataSource]="upcomingDaysForecast" class="mat-elevation-z8">
+  <ng-container matColumnDef="date">
+    <td mat-cell *matCellDef="let day">
+      {{day.date | date : 'EEEE, MMMM d'}}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="conditions">
-    <td mat-cell *matCellDef="let day"> {{day.conditions}} </td>
+    <td mat-cell *matCellDef="let day">
+      <img *ngIf="day.weather.icon"
+           [src]="'http://openweathermap.org/img/wn/' + day.weather.icon + '@2x.png'"
+           [alt]="day.weather.description"
+           class="weather-condition-icon">
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="high">
-    <td mat-cell *matCellDef="let day"> {{day.high}} </td>
+    <td mat-cell *matCellDef="let day">
+      {{day.temperature.max | convertKelvinTo : currentTemperatureUnit | number : '1.0-0'}}&deg;
+    </td>
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="low">
-    <td mat-cell *matCellDef="let day"> {{day.low}} </td>
+    <td mat-cell *matCellDef="let day">
+      {{day.temperature.min | convertKelvinTo : currentTemperatureUnit | number : '1.0-0'}}&deg;
+    </td>
   </ng-container>
 
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
