--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
@@ -1,7 +1,13 @@
 <table mat-table [dataSource]="upcomingDaysForecast" class="mat-elevation-z8">
+  <ng-container matColumnDef="day">
+    <td mat-cell *matCellDef="let day">
+      {{day.date | date : 'EEEE'}}
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="date">
     <td mat-cell *matCellDef="let day">
-      {{day.date | date : 'EEEE, MMMM d'}}
+      {{day.date | date : 'MMMM d'}}
     </td>
   </ng-container>
 
@@ -16,15 +22,19 @@
 
   <ng-container matColumnDef="high">
     <td mat-cell *matCellDef="let day">
-      {{day.temperature.max | convertKelvinTo : currentTemperatureUnit | number : '1.0-0'}}&deg;
+      {{day.temperature.max | convertKelvinTo : temperatureUnit | number : '1.0-0'}}&deg;
     </td>
   </ng-container>
 
   <ng-container matColumnDef="low">
     <td mat-cell *matCellDef="let day">
-      {{day.temperature.min | convertKelvinTo : currentTemperatureUnit | number : '1.0-0'}}&deg;
+      {{day.temperature.min | convertKelvinTo : temperatureUnit | number : '1.0-0'}}&deg;
     </td>
   </ng-container>
 
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row
+      *matRowDef="let row; let i = index; columns: displayedColumns;"
+      [ngClass]="{'selected': selectedDayIndex === i}"
+      (click)="selectDayByIndex(i)">
+  </tr>
 </table>
