--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.scss
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.scss
@@ -8,4 +8,16 @@
   .weather-condition-icon {
     width: 40px;
   }
+
+  tr {
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.04);
+    }
+
+    &.selected {
+      background: #e0e0e0;
+    }
+  }
 }
