--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
@@ -13,22 +13,19 @@
 
   <ng-container matColumnDef="conditions">
     <td mat-cell *matCellDef="let day">
-      <img *ngIf="day.weather.icon"
-           [src]="'http://openweathermap.org/img/wn/' + day.weather.icon + '@2x.png'"
-           [alt]="day.weather.description"
-           class="weather-condition-icon">
+      <fa-icon [icon]="openWeatherToFontAwesome[day.weather.icon]"></fa-icon>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="high">
     <td mat-cell *matCellDef="let day">
-      {{day.temperature.max | convertKelvinTo : temperatureUnit | number : '1.0-0'}}&deg;
+      {{day.temperature.max | convertKelvinTo : temperatureUnit}}&deg;
     </td>
   </ng-container>
 
   <ng-container matColumnDef="low">
     <td mat-cell *matCellDef="let day">
-      {{day.temperature.min | convertKelvinTo : temperatureUnit | number : '1.0-0'}}&deg;
+      {{day.temperature.min | convertKelvinTo : temperatureUnit}}&deg;
     </td>
   </ng-container>
 
