--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   main {
     max-width: var(--main-content-max-width);
     margin: 0 auto;
-    padding: 0.5em 1em 1em;
+    padding: 1em;
   }
 
   app-daily-forecast {
