--- a/src/app/components/location-search/location-search.component.html
+++ b/src/app/components/location-search/location-search.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="location-search">
-  <form class="search-form">
-    <mat-form-field class="city-form-field">
+  <form class="location-search__form">
+    <mat-form-field class="location-search__place-form-field">
       <input [matAutocomplete]="auto"
              [formControl]="placeControl"
              #placeInput
