--- a/src/app/components/location-search/location-search.component.scss
+++ b/src/app/components/location-search/location-search.component.scss
@@ -3,17 +3,17 @@
     display: flex;
     justify-content: center;
     height: fit-content;
-  }
 
-  .search-form {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: var(--main-content-max-width);
-    padding-top: 1.25em;
-  }
+    &__form {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      max-width: var(--main-content-max-width);
+      padding-top: 1.25em;
+    }
 
-  .city-form-field {
-    flex: 1;
+    &__place-form-field {
+      flex: 1;
+    }
   }
 }
