--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.scss
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.scss
@@ -1,12 +1,8 @@
 :host {
   display: block;
 
-  table {
+  .upcoming-days {
     width: 100%;
-  }
-
-  .weather-condition-icon {
-    width: 40px;
   }
 
   tr {
