--- a/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
+++ b/src/app/components/upcoming-days-forecast/upcoming-days-forecast.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="upcomingDaysForecast" class="mat-elevation-z8">
+<table mat-table
+       [dataSource]="upcomingDaysForecast"
+       class="upcoming-days mat-elevation-z4">
   <ng-container matColumnDef="day">
     <td mat-cell *matCellDef="let day">
       {{day.date | date : 'EEEE'}}
