--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,16 +4,16 @@
   main {
     max-width: var(--main-content-max-width);
     margin: 0 auto;
-    padding: 1em;
+    padding: 1rem;
   }
 
   app-daily-forecast {
-    margin: 1em 0 2em;
+    margin: 1rem 0 2em;
   }
 
   app-temperature-toggle {
     display: flex;
     justify-content: center;
-    margin-top: 1em;
+    margin-top: 1rem;
   }
 }
