Disable search input autocorrection. Hide keyboard in mobile when a place is selected.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,6 @@
   app-temperature-toggle {
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin: 1rem 0 4rem;
   }
 }
