Remove selected partition for each day once another day is selected.

--- a/src/app/components/daily-forecast/daily-forecast.component.html
+++ b/src/app/components/daily-forecast/daily-forecast.component.html
@@ -36,8 +36,7 @@
     </ng-container>
 
     <div *ngIf="forecast" class="daily-forecast__partitions-container">
-      <mat-button-toggle-group [value]="selectedPartitionIndex"
-                               class="daily-forecast__partitions">
+      <mat-button-toggle-group class="daily-forecast__partitions">
         <mat-button-toggle *ngFor="let partition of forecast.threeHourPartitions; let i = index"
                            (click)="currentPartition = forecast.threeHourPartitions[i]"
                            [value]="i"
